--- a/views/partials/ShowNotes.ejs
+++ b/views/partials/ShowNotes.ejs
@@ -1,8 +1,7 @@
 <ul class="show_notes">
     <% if (feedback.length > 0) { %>
-        <li>House ID: <%= feedback[feedback.length - 1].house %></li>
         <% if (feedback[feedback.length - 1].note) { %>
-            <li>Note: <%=(feedback[feedback.length - 1].note) %></li>
+            <li> <%=(feedback[feedback.length - 1].note) %></li>
         <% }
 
 
