--- a/views/partials/ShowNotes.ejs
+++ b/views/partials/ShowNotes.ejs
@@ -6,7 +6,7 @@
 
 
         else { %>
-            <p>No note for this house.</p>
+            <p>Er is geen notitie.</p>
         <% } %>
     <% }
 
