--- a/views/partials/ShowScore.ejs
+++ b/views/partials/ShowScore.ejs
@@ -1,15 +1,15 @@
 <ul class="showscore">
     <% if (feedback.length > 0) { %>
         <% if (feedback[feedback.length - 1].rating) { %>
-            <li>Kitchen : <%= feedback[feedback.length - 1].rating.kitchen %></li>
-            <li>general : <%= feedback[feedback.length - 1].rating.general %></li>
-            <li>badkamer: <%= feedback[feedback.length - 1].rating.bathroom %></li>
-            <li>tuin: <%= feedback[feedback.length - 1].rating.garden %></li>
+            <li>Algemeen : <%= feedback[feedback.length - 1].rating.kitchen %></li>
+            <li>Keuken : <%= feedback[feedback.length - 1].rating.general %></li>
+            <li>Badkamer: <%= feedback[feedback.length - 1].rating.bathroom %></li>
+            <li>Tuin: <%= feedback[feedback.length - 1].rating.garden %></li>
         <% } else { %>
-            <p class="successtate">er is geens core ingevoerd</p>
+            <p class="successtate"></p>
         <% } %>
     <% } else { %>
-        <p>No feedback available.</p>
+        <p>er is geen score ingevoerd.</p>
     <% } %>
 </ul>
 
