pagina staat goed op bijna alle schermen voor de score pagina

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -148,7 +148,7 @@ body {
     }
 
     .nav-icons a {
-      color: var(--white-primary-color);
+      color: var(--color-main-text);
     }
 
     .tablet-desktop a {
