--- a/views/partials/ShowScore.ejs
+++ b/views/partials/ShowScore.ejs
@@ -6,7 +6,7 @@
             <li>Badkamer: <%= feedback[feedback.length - 1].rating.bathroom %></li>
             <li>Tuin: <%= feedback[feedback.length - 1].rating.garden %></li>
         <% } else { %>
-            <p class="successtate"></p>
+            <p class="">er is geen score ingevoerd</p>
         <% } %>
     <% } else { %>
         <p>er is geen score ingevoerd.</p>
