--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -37,14 +37,21 @@ body {
     width: 4.5em;
   }
 
-  label.hamburger {
-    font-size: 1.2rem;
-    position: relative;
-    right: 26px;
-    bottom: 23px;
-    fill: var(--color-main-text);
-  }
-
+  /*label.hamburger {*/
+  /*  font-size: 1.2rem;*/
+  /*  position: relative;*/
+  /*  right: 26px;*/
+  /*  bottom: 23px;*/
+  /*  fill: var(--color-main-text);*/
+  /*}*/
+label.hamburger {
+  font-size: 1.2rem;
+  position: absolute;
+  right: 1em;
+  top: 0.7em;
+  bottom: 23px;
+  fill: var(--color-main-text);
+}
 
   input[type="checkbox"], .hamburger {
     float: right;
@@ -66,13 +73,21 @@ body {
     color: var(--color-main-text);
   }
 
-  nav > h3 {
-    float: right;
-    position: relative;
-    top: 20px;
-    left: 20px;
-    font-size: 16px;
-  }
+  /*nav > h3 {*/
+  /*  float: right;*/
+  /*  position: relative;*/
+  /*  top: 20px;*/
+  /*  left: 20px;*/
+  /*  font-size: 16px;*/
+  /*}*/
+nav > h3 {
+  float: right;
+  position: absolute;
+  top: 40px;
+  right: 5px;
+  /*left: 31px;*/
+  font-size: 16px;
+}
 
   ul {
     /*display: none;*/
@@ -97,6 +112,7 @@ body {
   #toggle:checked ~ ul {
     display: block;
     padding-top: 55px;
+    /*transition: 0.5s;*/
   }
 
   .nav-icons a > svg {
@@ -615,5 +631,22 @@ article {
 }
 
 
+@media (min-width: 45em) {
+  label.hamburger {
+    font-size: 1.2rem;
+    position: relative;
+    right: 0;
+    bottom: 23px;
+    fill: var(--color-main-text);
+  }
+  nav > h3 {
+    float: right;
+    position: relative;
+    top: 20px;
+    left: 46px;
+    font-size: 16px;
+  }
+
+}
 
 
